# seasonal-workflow

./: .gitignore  README.md  analysis_region_average.py  check_history_files.py  config.py  config_greatlakes_physics.yaml  config_nwa12.yaml  config_nwa12_cobalt.yaml  config_nwa12_physics.yaml  forecast_lib.py  postprocess_cleanup.py  postprocess_combine_fields.py  postprocess_combine_region_average.py  postprocess_extract_fields.py  postprocess_extracted_to_region_average.py  postprocess_logreg.py  postprocess_region_average.py  process_spear.py  process_spear_job.sh  pyproject.toml  pyrightconfig.json  ruff.toml  spear_path.py  spear_utils.py  utils.py  write_boundary_climo.py  write_ics_from_snapshot.py  write_nudging_data.py  write_river_climo.py  write_spear_atmos.py  write_spear_atmos_job.sh
analysis_postprocess/: analysis_region_average.py
examples/: logreg_prob_plot.ipynb
flow/: env_setup.sh  near_realtime_workflow.yaml  qc_atmos.yaml  qc_daily.yaml  retrospective_workflow.yaml  testflow.yaml
forecast_postprocess/: postprocess_cleanup.py  postprocess_combine_fields.py  postprocess_combine_new_forecasts.py  postprocess_combine_region_average.py  postprocess_extract_fields.py  postprocess_extracted_to_region_average.py  postprocess_logreg.py  postprocess_region_average.py
forecast_setup/: write_boundary_climo.py  write_ics_from_snapshot.py  write_river_climo.py  write_spear_atmos-greatlakes.py  write_spear_atmos.py
forecast_updates/: postprocess_combine_forecasts.py
new_forecasts/: postprocess_combine_forecasts.py  postprocess_combine_new_forecasts.py
(+45 files in other folders)
